# adventofcode

./: .gitmodules
2018/: 1a.rb  1b.rb  2a.rb  2b.rb  input
2019/: .rubocop.yml  10a.rb  10b.rb  11a.rb  11b.rb  12a.rb  12b.rb  13a.rb  13b.rb  14a.rb  14b.rb  15a.rb  15b.rb  16a.rb  16b.rb  17a.rb  17b.rb  18a.rb  19a.rb  19b.rb  1a.go  1a.rb  1a_test.go  1b.go  1b.rb  1b_test.go  2a-orig.rb  2a.rb  2b-orig.rb  2b.rb  3a.rb  3b.rb  4a.rb  4b.rb  5a.rb  5b.rb  6a.rb  6b.rb  7a.rb  7b.rb  (+5 more)
2019/lib/: intcode.rb  (+2 more)
2020/: 10a.go  10b.go  11a.go  11b.go  12a.go  12b.go  13a.go  13b.go  14a.go  14a_test.go  14b.go  15a.go  15a_test.go  15b.go  16a.go  16b.go  17a.go  17b.go  18a.go  18b.go  19a.go  19b.go  1a.go  1a_test.go  1b.go  1b_test.go  20.go  20_test.go  20a.go  20b.go  21.go  21.py  21a.go  21b.go  22.py  22a.go  22b.go  23.go  23.py  23a.go  (+32 more)
2021/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18-orig.py  18.py  2.py  20.py  21.py  22.py  23.py  3.py  4.py  5.py  6.py  7.py  8.py  9-test2.txt  9.py  input  util.py
2022/: Cargo.toml  input
2022/input/: 21-verify.txt
2022/src/: main.rs  util.rs
2022/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day25.rs
2022/src/etc/: solution.rs
2023/: 1.rb  2.rb  3.rb  4.rb  5.rb  6.rb  7.rb  8.rb  9.rb  input
libadvent/: combinations_test.go  go.mod  input.go  input_test.go  math_test.go  readfile.go  readfilelines_test.go  util.go
(+8 files in other folders)
